# aipproto

./: .gitignore  MODULE.bazel  README.md  pyproject.toml
.github/workflows/: python-test.yml
src/aipproto/: __init__.py  generate.py  hierarchy.py  options.py  render.py  resource.py  resource_config.py
src/aipproto/_internal/: __init__.py  render.py
src/aipproto/_internal/methods/: __init__.py  custom_method.py
src/aipproto/_internal/req_res/: __init__.py
src/aipproto/_internal/templates/: .gitkeep
src/aipproto/methods/: create_method.py  delete_method.py  get_method.py  list_method.py  update_method.py
src/aipproto/req_res/: create_req_res.py  delete_req_res.py  get_req_res.py  list_req_res.py  update_req_res.py
src/aipproto/templates/: proto.jinja
tests/: test_generate.py  test_render.py
tests/testdata/: BUILD.bazel  golden.proto
tests/testdata/v1/: golden.proto
