[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipproto"
version = "0.1.0"
authors = [
  { name="Phil Stahlfeld", email="phil@stahlfeld.com" },
]
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/your_package_name"
Issues = "https://github.com/yourusername/your_package_name/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"your_package_name" = ["src/aipproto/templates/*.jinja"]

[tool.pytest.ini_options]
# Configure pytest here
# This tells pytest where to look for tests
testpaths = ["tests"]
# Essential for src-layout to ensure tests import the *installed* package
# rather than accidentally trying to import from the src directory directly.
# This prevents a common pitfall.
pythonpath = ["src"]

[project.optional-dependencies]
# Dependencies only needed for development or testing
test = [
    "pytest>=7.0",
    "pytest-cov", # For coverage reporting (optional but recommended)
    # Any other packages your tests rely on, e.g., requests, numpy, etc.
]