[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=6.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aipproto"
# Version will be managed by setuptools_scm
# version = "0.1.1"
authors = [
  { name="Phil Stahlfeld", email="phil@stahlfeld.com" },
]
dynamic = ["version"]
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "jinja2>=3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/your_package_name"
Issues = "https://github.com/yourusername/your_package_name/issues"

[project.optional-dependencies]
# Dependencies only needed for development or testing
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"aipproto" = ["templates/*.jinja"]

[tool.pytest.ini_options]
# Configure pytest here
# This tells pytest where to look for tests
testpaths = ["tests"]
# Essential for src-layout to ensure tests import the *installed* package
# rather than accidentally trying to import from the src directory directly.
# This prevents a common pitfall.
pythonpath = ["src"]

enable_assertion_pass_hook = true

[tool.setuptools_scm]
# Configuration for setuptools_scm, e.g.
# write_to = "src/aipproto/_version.py"
# version_scheme = "guess-next-dev"
# local_scheme = "node-and-date"