load("@protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "golden_proto",
    srcs = ["golden.proto"],
    deps = [
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/api:client_proto",
        "@googleapis//google/api:field_behavior_proto",
        "@googleapis//google/api:resource_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:field_mask_proto",
    ],
)
